<resources>
    <string name="default_web_id" translatable="false">419092477295-51teg9721tpl6l0dujhnhhlnbldg0uuj.apps.googleusercontent.com</string>
    <string name="app_name">Home Controller</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_kitty_door">Kitty Door</string>
    <string name="options">Options</string>
    <string name="kitty_door_is">Kitty Door Is:</string>
    <string name="light_level_title">Light Level:</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hardware_override">Hardware Override:</string>
    <string name="check_light_level">Check Light Level</string>
    <string name="automatic">Automatic</string>
    <string name="garage_door_is">Garage Door is:</string>
    <string name="title_smart_garage">Garage Door</string>
    <string name="hw_override_enabled">Hardware Override Enabled</string>
    <string name="hw_override_enabled_msg">" Remote opening/closing is disabled while hardware override is enabled."</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="doors">Doors</string>
    <string name="solar_panels">Solar Panels</string>
    <string name="auto_close">Auto Close</string>
    <string name="close_after">Close After:</string>
    <string name="warn_before_closing">Warn Before Closing</string>
    <string name="send_warning_after">Send Warning After:</string>
    <string name="save_settings">Save Settings</string>
    <string name="smart_garage_options">Smart Garage Options</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="select_date_range">Select Date Range</string>
</resources>