<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ms8.homecontroller.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_kitty_door"
        android:name="com.ms8.homecontroller.ui.kittydoor.KittyDoorFragment"
        android:label="@string/title_kitty_door"
        tools:layout="@layout/fragment_kitty_door" />

    <fragment
        android:id="@+id/navigation_smart_garage"
        android:name="com.ms8.homecontroller.ui.smartgarage.SmartGarageFragment"
        android:label="@string/title_smart_garage"
        tools:layout="@layout/fragment_smart_garage" />
</navigation>